JumpScript/tests/baselines/reference/extendBaseClassBeforeItsDeclared.errors.txt
tests/cases/compiler/extendBaseClassBeforeItsDeclared.jump(1,23): error TS2449: Class 'base' used before its declaration.


==== tests/cases/compiler/extendBaseClassBeforeItsDeclared.jump (1 errors) ====
    class derived extends base { }
                          ~~~~
!!! error TS2449: Class 'base' used before its declaration.
     
    class base { constructor (public n: number) { } }